ghc-4335c07/testsuite/tests/dependent/should_compile/T11635.hs
{-# LANGUAGE TypeInType, KindSignatures, ExplicitForAll #-}

module T11635 where

import Data.Kind

data X (a :: forall k. k -> * ) b = X
